--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -123,16 +123,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            date  precipitation\n",
+      "0     2016-08-23           0.00\n",
+      "1     2016-08-24           0.08\n",
+      "2     2016-08-25           0.08\n",
+      "3     2016-08-26           0.00\n",
+      "4     2016-08-27           0.00\n",
+      "...          ...            ...\n",
+      "2225  2017-08-19           0.09\n",
+      "2226  2017-08-20            NaN\n",
+      "2227  2017-08-21           0.56\n",
+      "2228  2017-08-22           0.50\n",
+      "2229  2017-08-23           0.45\n",
+      "\n",
+      "[2230 rows x 2 columns]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +182,7 @@
     "df = pd.DataFrame(results, columns=['date','precipitation'])\n",
     "# Sort the dataframe by date\n",
     "#df.set_index(df['date'], inplace=True) ---\n",
-    "#print(df) ---\n",
+    "print(df)\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "df = df.sort_index()\n",
     "#print(df.to_string(index=False)) ---\n",
